fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ html {
     height: 550px;
     background: url(https://web.archive.org/web/20140301004302im_/http://images.apple.com/v/home/as/images/your_verse_hero.jpg) 50% 100% no-repeat;
     overflow: hidden;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .global-nav {
